style: fix style maps image (zoom on overflow) and minor style&perf

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -48,7 +48,6 @@
     transition-all duration-100 ease-in-out
     hover:text-(--primary-color) hover:border-(--primary-color)
     active:text-(--secondary-color) active:border-(--secondary-color)
-    active:shadow-lg
     text-sm py-1 px-3;
   }
 
@@ -58,10 +57,6 @@
 
   .sosmed svg {
     @apply w-6 h-6 mr-2;
-  }
-
-  address ul li a svg {
-  
   }
 
   .overflow-hidden {
